@@ -5,6 +5,7 @@ S3method(all.equal,Workbook)
 S3method(names,Workbook)
 S3method(read.xlsx,Workbook)
 S3method(read.xlsx,default)
+export("sheetVisible<-")
 export("worksheetOrder<-")
 export(addFilter)
 export(addStyle)
@@ -48,6 +49,7 @@ export(setFooter)
 export(setHeader)
 export(setHeaderFooter)
 export(setRowHeights)
+export(sheetVisible)
 export(sheets)
 export(showGridLines)
 export(worksheetOrder)
